latex_parser/y.output
Terminaux inutilisés dans la grammaire

   NEWPARAGRAPH
   DOUBLE_AND
   BACKSLASH
   ERROR


Grammaire

    0 $accept: document $end

    1 command_name: TITLE
    2             | PART
    3             | CHAPTER
    4             | SECTION
    5             | SUBSECTION
    6             | SUBSUBSECTION
    7             | PARAGRAPH
    8             | SUBPARAGRAPH
    9             | FLUSHRIGHT
   10             | FLUSHLEFT
   11             | CENTER
   12             | NEWLINE
   13             | TINY
   14             | SCRIPTSIZE
   15             | FOOTNOTESIZE
   16             | SMALL
   17             | NORMALSIZE
   18             | LARGE
   19             | VERYLARGE
   20             | VERYVERYLARGE
   21             | HUGE
   22             | VERYHUGE
   23             | TEXTCOLOR
   24             | FONTFAMILY
   25             | NORMALFONT
   26             | BFSERIES
   27             | ITSHAPE
   28             | TEXTSC
   29             | TEXTSUPERSCRIPT
   30             | FBOX
   31             | UL
   32             | BARRER
   33             | LABEL
   34             | REF
   35             | PAGEREF
   36             | INDEX
   37             | CITE
   38             | FOOTNOTE
   39             | DATE
   40             | TODAY

   41 separated_strings: separated_strings ',' STRING
   42                  | STRING

   43 optional_options_list: optional_options_list '[' separated_strings ']'
   44                      | '[' separated_strings ']'

   45 items_list: items_list ITEM elements_list
   46           | ITEM elements_list

   47 columns_list: columns_list '&' elements_list
   48             | elements_list

   49 rows_list: rows_list ROW_SEPARATOR columns_list
   50          | columns_list

   51 env: BEGIN_ENV '{' DOCUMENT '}' optional_options_list elements_list END_ENV '{' DOCUMENT '}'
   52    | BEGIN_ENV '{' DOCUMENT '}' elements_list END_ENV '{' DOCUMENT '}'
   53    | BEGIN_ENV '{' TITLEPAGE '}' optional_options_list elements_list END_ENV '{' TITLEPAGE '}'
   54    | BEGIN_ENV '{' TITLEPAGE '}' elements_list END_ENV '{' TITLEPAGE '}'
   55    | BEGIN_ENV '{' ENV_CENTER '}' optional_options_list elements_list END_ENV '{' ENV_CENTER '}'
   56    | BEGIN_ENV '{' ENV_CENTER '}' elements_list END_ENV '{' ENV_CENTER '}'
   57    | BEGIN_ENV '{' ENUMERATE '}' items_list END_ENV '{' ENUMERATE '}'
   58    | BEGIN_ENV '{' ITEMIZE '}' items_list END_ENV '{' ITEMIZE '}'
   59    | BEGIN_ENV '{' TABLE '}' '{' STRING '}' rows_list END_ENV '{' TABLE '}'
   60    | BEGIN_ENV '{' TABLE '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABLE '}'
   61    | BEGIN_ENV '{' TABULAR '}' '{' STRING '}' rows_list END_ENV '{' TABULAR '}'
   62    | BEGIN_ENV '{' TABULAR '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABULAR '}'
   63    | BEGIN_ENV '{' EQUATION '}' elements_list END_ENV '{' EQUATION '}'
   64    | BEGIN_ENV '{' NUMEROTED_EQUATION '}' elements_list END_ENV '{' NUMEROTED_EQUATION '}'

   65 command: command_name
   66        | command_name optional_options_list

   67 escaped_char: DOLLAR_PRINTED
   68             | AND_PRINTED
   69             | OPSQRBRK_PRINTED
   70             | CLSQRBRK_PRINTED
   71             | OPBRC_PRINTED
   72             | CLBRC_PRINTED

   73 text: escaped_char
   74     | STRING

   75 element: text
   76        | command
   77        | env
   78        | SPACE
   79        | '{' elements_list '}'

   80 elements_list: elements_list element
   81              | element

   82 document: elements_list


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'&' (38) 47
',' (44) 41
'[' (91) 43 44
']' (93) 43 44
'{' (123) 51 52 53 54 55 56 57 58 59 60 61 62 63 64 79
'}' (125) 51 52 53 54 55 56 57 58 59 60 61 62 63 64 79
error (256)
TITLE (258) 1
PART (259) 2
CHAPTER (260) 3
SECTION (261) 4
SUBSECTION (262) 5
SUBSUBSECTION (263) 6
PARAGRAPH (264) 7
SUBPARAGRAPH (265) 8
FLUSHRIGHT (266) 9
FLUSHLEFT (267) 10
CENTER (268) 11
NEWLINE (269) 12
SPACE (270) 78
NEWPARAGRAPH (271)
TINY (272) 13
SCRIPTSIZE (273) 14
FOOTNOTESIZE (274) 15
SMALL (275) 16
NORMALSIZE (276) 17
LARGE (277) 18
VERYLARGE (278) 19
VERYVERYLARGE (279) 20
HUGE (280) 21
VERYHUGE (281) 22
TEXTCOLOR (282) 23
FONTFAMILY (283) 24
NORMALFONT (284) 25
BFSERIES (285) 26
ITSHAPE (286) 27
TEXTSC (287) 28
TEXTSUPERSCRIPT (288) 29
FBOX (289) 30
UL (290) 31
BARRER (291) 32
LABEL (292) 33
REF (293) 34
PAGEREF (294) 35
INDEX (295) 36
CITE (296) 37
FOOTNOTE (297) 38
DATE (298) 39
TODAY (299) 40
BEGIN_ENV (300) 51 52 53 54 55 56 57 58 59 60 61 62 63 64
END_ENV (301) 51 52 53 54 55 56 57 58 59 60 61 62 63 64
ITEM (302) 45 46
ROW_SEPARATOR (303) 49 60 62
DOCUMENT (304) 51 52
TITLEPAGE (305) 53 54
ENV_CENTER (306) 55 56
TABLE (307) 59 60
TABULAR (308) 61 62
ENUMERATE (309) 57
ITEMIZE (310) 58
EQUATION (311) 63
NUMEROTED_EQUATION (312) 64
DOLLAR_PRINTED (313) 67
AND_PRINTED (314) 68
OPSQRBRK_PRINTED (315) 69
CLSQRBRK_PRINTED (316) 70
OPBRC_PRINTED (317) 71
CLBRC_PRINTED (318) 72
DOUBLE_AND (319)
BACKSLASH (320)
STRING (321) 41 42 59 60 61 62 74
ERROR (322)


Non-terminaux, suivis des règles où ils apparaissent

$accept (74)
    à gauche: 0
command_name (75)
    à gauche: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40, à droite:
    65 66
separated_strings (76)
    à gauche: 41 42, à droite: 41 43 44
optional_options_list (77)
    à gauche: 43 44, à droite: 43 51 53 55 66
items_list (78)
    à gauche: 45 46, à droite: 45 57 58
columns_list (79)
    à gauche: 47 48, à droite: 47 49 50
rows_list (80)
    à gauche: 49 50, à droite: 49 59 60 61 62
env (81)
    à gauche: 51 52 53 54 55 56 57 58 59 60 61 62 63 64, à droite:
    77
command (82)
    à gauche: 65 66, à droite: 76
escaped_char (83)
    à gauche: 67 68 69 70 71 72, à droite: 73
text (84)
    à gauche: 73 74, à droite: 75
element (85)
    à gauche: 75 76 77 78 79, à droite: 80 81
elements_list (86)
    à gauche: 80 81, à droite: 45 46 47 48 51 52 53 54 55 56 63 64
    79 80 82
document (87)
    à gauche: 82, à droite: 0


État 0

    0 $accept: . document $end

    TITLE             décalage et aller à l'état 1
    PART              décalage et aller à l'état 2
    CHAPTER           décalage et aller à l'état 3
    SECTION           décalage et aller à l'état 4
    SUBSECTION        décalage et aller à l'état 5
    SUBSUBSECTION     décalage et aller à l'état 6
    PARAGRAPH         décalage et aller à l'état 7
    SUBPARAGRAPH      décalage et aller à l'état 8
    FLUSHRIGHT        décalage et aller à l'état 9
    FLUSHLEFT         décalage et aller à l'état 10
    CENTER            décalage et aller à l'état 11
    NEWLINE           décalage et aller à l'état 12
    SPACE             décalage et aller à l'état 13
    TINY              décalage et aller à l'état 14
    SCRIPTSIZE        décalage et aller à l'état 15
    FOOTNOTESIZE      décalage et aller à l'état 16
    SMALL             décalage et aller à l'état 17
    NORMALSIZE        décalage et aller à l'état 18
    LARGE             décalage et aller à l'état 19
    VERYLARGE         décalage et aller à l'état 20
    VERYVERYLARGE     décalage et aller à l'état 21
    HUGE              décalage et aller à l'état 22
    VERYHUGE          décalage et aller à l'état 23
    TEXTCOLOR         décalage et aller à l'état 24
    FONTFAMILY        décalage et aller à l'état 25
    NORMALFONT        décalage et aller à l'état 26
    BFSERIES          décalage et aller à l'état 27
    ITSHAPE           décalage et aller à l'état 28
    TEXTSC            décalage et aller à l'état 29
    TEXTSUPERSCRIPT   décalage et aller à l'état 30
    FBOX              décalage et aller à l'état 31
    UL                décalage et aller à l'état 32
    BARRER            décalage et aller à l'état 33
    LABEL             décalage et aller à l'état 34
    REF               décalage et aller à l'état 35
    PAGEREF           décalage et aller à l'état 36
    INDEX             décalage et aller à l'état 37
    CITE              décalage et aller à l'état 38
    FOOTNOTE          décalage et aller à l'état 39
    DATE              décalage et aller à l'état 40
    TODAY             décalage et aller à l'état 41
    BEGIN_ENV         décalage et aller à l'état 42
    DOLLAR_PRINTED    décalage et aller à l'état 43
    AND_PRINTED       décalage et aller à l'état 44
    OPSQRBRK_PRINTED  décalage et aller à l'état 45
    CLSQRBRK_PRINTED  décalage et aller à l'état 46
    OPBRC_PRINTED     décalage et aller à l'état 47
    CLBRC_PRINTED     décalage et aller à l'état 48
    STRING            décalage et aller à l'état 49
    '{'               décalage et aller à l'état 50

    command_name   aller à l'état 51
    env            aller à l'état 52
    command        aller à l'état 53
    escaped_char   aller à l'état 54
    text           aller à l'état 55
    element        aller à l'état 56
    elements_list  aller à l'état 57
    document       aller à l'état 58


État 1

    1 command_name: TITLE .

    $défaut  réduction par utilisation de la règle 1 (command_name)


État 2

    2 command_name: PART .

    $défaut  réduction par utilisation de la règle 2 (command_name)


État 3

    3 command_name: CHAPTER .

    $défaut  réduction par utilisation de la règle 3 (command_name)


État 4

    4 command_name: SECTION .

    $défaut  réduction par utilisation de la règle 4 (command_name)


État 5

    5 command_name: SUBSECTION .

    $défaut  réduction par utilisation de la règle 5 (command_name)


État 6

    6 command_name: SUBSUBSECTION .

    $défaut  réduction par utilisation de la règle 6 (command_name)


État 7

    7 command_name: PARAGRAPH .

    $défaut  réduction par utilisation de la règle 7 (command_name)


État 8

    8 command_name: SUBPARAGRAPH .

    $défaut  réduction par utilisation de la règle 8 (command_name)


État 9

    9 command_name: FLUSHRIGHT .

    $défaut  réduction par utilisation de la règle 9 (command_name)


État 10

   10 command_name: FLUSHLEFT .

    $défaut  réduction par utilisation de la règle 10 (command_name)


État 11

   11 command_name: CENTER .

    $défaut  réduction par utilisation de la règle 11 (command_name)


État 12

   12 command_name: NEWLINE .

    $défaut  réduction par utilisation de la règle 12 (command_name)


État 13

   78 element: SPACE .

    $défaut  réduction par utilisation de la règle 78 (element)


État 14

   13 command_name: TINY .

    $défaut  réduction par utilisation de la règle 13 (command_name)


État 15

   14 command_name: SCRIPTSIZE .

    $défaut  réduction par utilisation de la règle 14 (command_name)


État 16

   15 command_name: FOOTNOTESIZE .

    $défaut  réduction par utilisation de la règle 15 (command_name)


État 17

   16 command_name: SMALL .

    $défaut  réduction par utilisation de la règle 16 (command_name)


État 18

   17 command_name: NORMALSIZE .

    $défaut  réduction par utilisation de la règle 17 (command_name)


État 19

   18 command_name: LARGE .

    $défaut  réduction par utilisation de la règle 18 (command_name)


État 20

   19 command_name: VERYLARGE .

    $défaut  réduction par utilisation de la règle 19 (command_name)


État 21

   20 command_name: VERYVERYLARGE .

    $défaut  réduction par utilisation de la règle 20 (command_name)


État 22

   21 command_name: HUGE .

    $défaut  réduction par utilisation de la règle 21 (command_name)


État 23

   22 command_name: VERYHUGE .

    $défaut  réduction par utilisation de la règle 22 (command_name)


État 24

   23 command_name: TEXTCOLOR .

    $défaut  réduction par utilisation de la règle 23 (command_name)


État 25

   24 command_name: FONTFAMILY .

    $défaut  réduction par utilisation de la règle 24 (command_name)


État 26

   25 command_name: NORMALFONT .

    $défaut  réduction par utilisation de la règle 25 (command_name)


État 27

   26 command_name: BFSERIES .

    $défaut  réduction par utilisation de la règle 26 (command_name)


État 28

   27 command_name: ITSHAPE .

    $défaut  réduction par utilisation de la règle 27 (command_name)


État 29

   28 command_name: TEXTSC .

    $défaut  réduction par utilisation de la règle 28 (command_name)


État 30

   29 command_name: TEXTSUPERSCRIPT .

    $défaut  réduction par utilisation de la règle 29 (command_name)


État 31

   30 command_name: FBOX .

    $défaut  réduction par utilisation de la règle 30 (command_name)


État 32

   31 command_name: UL .

    $défaut  réduction par utilisation de la règle 31 (command_name)


État 33

   32 command_name: BARRER .

    $défaut  réduction par utilisation de la règle 32 (command_name)


État 34

   33 command_name: LABEL .

    $défaut  réduction par utilisation de la règle 33 (command_name)


État 35

   34 command_name: REF .

    $défaut  réduction par utilisation de la règle 34 (command_name)


État 36

   35 command_name: PAGEREF .

    $défaut  réduction par utilisation de la règle 35 (command_name)


État 37

   36 command_name: INDEX .

    $défaut  réduction par utilisation de la règle 36 (command_name)


État 38

   37 command_name: CITE .

    $défaut  réduction par utilisation de la règle 37 (command_name)


État 39

   38 command_name: FOOTNOTE .

    $défaut  réduction par utilisation de la règle 38 (command_name)


État 40

   39 command_name: DATE .

    $défaut  réduction par utilisation de la règle 39 (command_name)


État 41

   40 command_name: TODAY .

    $défaut  réduction par utilisation de la règle 40 (command_name)


État 42

   51 env: BEGIN_ENV . '{' DOCUMENT '}' optional_options_list elements_list END_ENV '{' DOCUMENT '}'
   52    | BEGIN_ENV . '{' DOCUMENT '}' elements_list END_ENV '{' DOCUMENT '}'
   53    | BEGIN_ENV . '{' TITLEPAGE '}' optional_options_list elements_list END_ENV '{' TITLEPAGE '}'
   54    | BEGIN_ENV . '{' TITLEPAGE '}' elements_list END_ENV '{' TITLEPAGE '}'
   55    | BEGIN_ENV . '{' ENV_CENTER '}' optional_options_list elements_list END_ENV '{' ENV_CENTER '}'
   56    | BEGIN_ENV . '{' ENV_CENTER '}' elements_list END_ENV '{' ENV_CENTER '}'
   57    | BEGIN_ENV . '{' ENUMERATE '}' items_list END_ENV '{' ENUMERATE '}'
   58    | BEGIN_ENV . '{' ITEMIZE '}' items_list END_ENV '{' ITEMIZE '}'
   59    | BEGIN_ENV . '{' TABLE '}' '{' STRING '}' rows_list END_ENV '{' TABLE '}'
   60    | BEGIN_ENV . '{' TABLE '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABLE '}'
   61    | BEGIN_ENV . '{' TABULAR '}' '{' STRING '}' rows_list END_ENV '{' TABULAR '}'
   62    | BEGIN_ENV . '{' TABULAR '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABULAR '}'
   63    | BEGIN_ENV . '{' EQUATION '}' elements_list END_ENV '{' EQUATION '}'
   64    | BEGIN_ENV . '{' NUMEROTED_EQUATION '}' elements_list END_ENV '{' NUMEROTED_EQUATION '}'

    '{'  décalage et aller à l'état 59


État 43

   67 escaped_char: DOLLAR_PRINTED .

    $défaut  réduction par utilisation de la règle 67 (escaped_char)


État 44

   68 escaped_char: AND_PRINTED .

    $défaut  réduction par utilisation de la règle 68 (escaped_char)


État 45

   69 escaped_char: OPSQRBRK_PRINTED .

    $défaut  réduction par utilisation de la règle 69 (escaped_char)


État 46

   70 escaped_char: CLSQRBRK_PRINTED .

    $défaut  réduction par utilisation de la règle 70 (escaped_char)


État 47

   71 escaped_char: OPBRC_PRINTED .

    $défaut  réduction par utilisation de la règle 71 (escaped_char)


État 48

   72 escaped_char: CLBRC_PRINTED .

    $défaut  réduction par utilisation de la règle 72 (escaped_char)


État 49

   74 text: STRING .

    $défaut  réduction par utilisation de la règle 74 (text)


État 50

   79 element: '{' . elements_list '}'

    TITLE             décalage et aller à l'état 1
    PART              décalage et aller à l'état 2
    CHAPTER           décalage et aller à l'état 3
    SECTION           décalage et aller à l'état 4
    SUBSECTION        décalage et aller à l'état 5
    SUBSUBSECTION     décalage et aller à l'état 6
    PARAGRAPH         décalage et aller à l'état 7
    SUBPARAGRAPH      décalage et aller à l'état 8
    FLUSHRIGHT        décalage et aller à l'état 9
    FLUSHLEFT         décalage et aller à l'état 10
    CENTER            décalage et aller à l'état 11
    NEWLINE           décalage et aller à l'état 12
    SPACE             décalage et aller à l'état 13
    TINY              décalage et aller à l'état 14
    SCRIPTSIZE        décalage et aller à l'état 15
    FOOTNOTESIZE      décalage et aller à l'état 16
    SMALL             décalage et aller à l'état 17
    NORMALSIZE        décalage et aller à l'état 18
    LARGE             décalage et aller à l'état 19
    VERYLARGE         décalage et aller à l'état 20
    VERYVERYLARGE     décalage et aller à l'état 21
    HUGE              décalage et aller à l'état 22
    VERYHUGE          décalage et aller à l'état 23
    TEXTCOLOR         décalage et aller à l'état 24
    FONTFAMILY        décalage et aller à l'état 25
    NORMALFONT        décalage et aller à l'état 26
    BFSERIES          décalage et aller à l'état 27
    ITSHAPE           décalage et aller à l'état 28
    TEXTSC            décalage et aller à l'état 29
    TEXTSUPERSCRIPT   décalage et aller à l'état 30
    FBOX              décalage et aller à l'état 31
    UL                décalage et aller à l'état 32
    BARRER            décalage et aller à l'état 33
    LABEL             décalage et aller à l'état 34
    REF               décalage et aller à l'état 35
    PAGEREF           décalage et aller à l'état 36
    INDEX             décalage et aller à l'état 37
    CITE              décalage et aller à l'état 38
    FOOTNOTE          décalage et aller à l'état 39
    DATE              décalage et aller à l'état 40
    TODAY             décalage et aller à l'état 41
    BEGIN_ENV         décalage et aller à l'état 42
    DOLLAR_PRINTED    décalage et aller à l'état 43
    AND_PRINTED       décalage et aller à l'état 44
    OPSQRBRK_PRINTED  décalage et aller à l'état 45
    CLSQRBRK_PRINTED  décalage et aller à l'état 46
    OPBRC_PRINTED     décalage et aller à l'état 47
    CLBRC_PRINTED     décalage et aller à l'état 48
    STRING            décalage et aller à l'état 49
    '{'               décalage et aller à l'état 50

    command_name   aller à l'état 51
    env            aller à l'état 52
    command        aller à l'état 53
    escaped_char   aller à l'état 54
    text           aller à l'état 55
    element        aller à l'état 56
    elements_list  aller à l'état 60


État 51

   65 command: command_name .
   66        | command_name . optional_options_list

    '['  décalage et aller à l'état 61

    $défaut  réduction par utilisation de la règle 65 (command)

    optional_options_list  aller à l'état 62


État 52

   77 element: env .

    $défaut  réduction par utilisation de la règle 77 (element)


État 53

   76 element: command .

    $défaut  réduction par utilisation de la règle 76 (element)


État 54

   73 text: escaped_char .

    $défaut  réduction par utilisation de la règle 73 (text)


État 55

   75 element: text .

    $défaut  réduction par utilisation de la règle 75 (element)


État 56

   81 elements_list: element .

    $défaut  réduction par utilisation de la règle 81 (elements_list)


État 57

   80 elements_list: elements_list . element
   82 document: elements_list .

    TITLE             décalage et aller à l'état 1
    PART              décalage et aller à l'état 2
    CHAPTER           décalage et aller à l'état 3
    SECTION           décalage et aller à l'état 4
    SUBSECTION        décalage et aller à l'état 5
    SUBSUBSECTION     décalage et aller à l'état 6
    PARAGRAPH         décalage et aller à l'état 7
    SUBPARAGRAPH      décalage et aller à l'état 8
    FLUSHRIGHT        décalage et aller à l'état 9
    FLUSHLEFT         décalage et aller à l'état 10
    CENTER            décalage et aller à l'état 11
    NEWLINE           décalage et aller à l'état 12
    SPACE             décalage et aller à l'état 13
    TINY              décalage et aller à l'état 14
    SCRIPTSIZE        décalage et aller à l'état 15
    FOOTNOTESIZE      décalage et aller à l'état 16
    SMALL             décalage et aller à l'état 17
    NORMALSIZE        décalage et aller à l'état 18
    LARGE             décalage et aller à l'état 19
    VERYLARGE         décalage et aller à l'état 20
    VERYVERYLARGE     décalage et aller à l'état 21
    HUGE              décalage et aller à l'état 22
    VERYHUGE          décalage et aller à l'état 23
    TEXTCOLOR         décalage et aller à l'état 24
    FONTFAMILY        décalage et aller à l'état 25
    NORMALFONT        décalage et aller à l'état 26
    BFSERIES          décalage et aller à l'état 27
    ITSHAPE           décalage et aller à l'état 28
    TEXTSC            décalage et aller à l'état 29
    TEXTSUPERSCRIPT   décalage et aller à l'état 30
    FBOX              décalage et aller à l'état 31
    UL                décalage et aller à l'état 32
    BARRER            décalage et aller à l'état 33
    LABEL             décalage et aller à l'état 34
    REF               décalage et aller à l'état 35
    PAGEREF           décalage et aller à l'état 36
    INDEX             décalage et aller à l'état 37
    CITE              décalage et aller à l'état 38
    FOOTNOTE          décalage et aller à l'état 39
    DATE              décalage et aller à l'état 40
    TODAY             décalage et aller à l'état 41
    BEGIN_ENV         décalage et aller à l'état 42
    DOLLAR_PRINTED    décalage et aller à l'état 43
    AND_PRINTED       décalage et aller à l'état 44
    OPSQRBRK_PRINTED  décalage et aller à l'état 45
    CLSQRBRK_PRINTED  décalage et aller à l'état 46
    OPBRC_PRINTED     décalage et aller à l'état 47
    CLBRC_PRINTED     décalage et aller à l'état 48
    STRING            décalage et aller à l'état 49
    '{'               décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 82 (document)

    command_name  aller à l'état 51
    env           aller à l'état 52
    command       aller à l'état 53
    escaped_char  aller à l'état 54
    text          aller à l'état 55
    element       aller à l'état 63


État 58

    0 $accept: document . $end

    $end  décalage et aller à l'état 64


État 59

   51 env: BEGIN_ENV '{' . DOCUMENT '}' optional_options_list elements_list END_ENV '{' DOCUMENT '}'
   52    | BEGIN_ENV '{' . DOCUMENT '}' elements_list END_ENV '{' DOCUMENT '}'
   53    | BEGIN_ENV '{' . TITLEPAGE '}' optional_options_list elements_list END_ENV '{' TITLEPAGE '}'
   54    | BEGIN_ENV '{' . TITLEPAGE '}' elements_list END_ENV '{' TITLEPAGE '}'
   55    | BEGIN_ENV '{' . ENV_CENTER '}' optional_options_list elements_list END_ENV '{' ENV_CENTER '}'
   56    | BEGIN_ENV '{' . ENV_CENTER '}' elements_list END_ENV '{' ENV_CENTER '}'
   57    | BEGIN_ENV '{' . ENUMERATE '}' items_list END_ENV '{' ENUMERATE '}'
   58    | BEGIN_ENV '{' . ITEMIZE '}' items_list END_ENV '{' ITEMIZE '}'
   59    | BEGIN_ENV '{' . TABLE '}' '{' STRING '}' rows_list END_ENV '{' TABLE '}'
   60    | BEGIN_ENV '{' . TABLE '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABLE '}'
   61    | BEGIN_ENV '{' . TABULAR '}' '{' STRING '}' rows_list END_ENV '{' TABULAR '}'
   62    | BEGIN_ENV '{' . TABULAR '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABULAR '}'
   63    | BEGIN_ENV '{' . EQUATION '}' elements_list END_ENV '{' EQUATION '}'
   64    | BEGIN_ENV '{' . NUMEROTED_EQUATION '}' elements_list END_ENV '{' NUMEROTED_EQUATION '}'

    DOCUMENT            décalage et aller à l'état 65
    TITLEPAGE           décalage et aller à l'état 66
    ENV_CENTER          décalage et aller à l'état 67
    TABLE               décalage et aller à l'état 68
    TABULAR             décalage et aller à l'état 69
    ENUMERATE           décalage et aller à l'état 70
    ITEMIZE             décalage et aller à l'état 71
    EQUATION            décalage et aller à l'état 72
    NUMEROTED_EQUATION  décalage et aller à l'état 73


État 60

   79 element: '{' elements_list . '}'
   80 elements_list: elements_list . element

    TITLE             décalage et aller à l'état 1
    PART              décalage et aller à l'état 2
    CHAPTER           décalage et aller à l'état 3
    SECTION           décalage et aller à l'état 4
    SUBSECTION        décalage et aller à l'état 5
    SUBSUBSECTION     décalage et aller à l'état 6
    PARAGRAPH         décalage et aller à l'état 7
    SUBPARAGRAPH      décalage et aller à l'état 8
    FLUSHRIGHT        décalage et aller à l'état 9
    FLUSHLEFT         décalage et aller à l'état 10
    CENTER            décalage et aller à l'état 11
    NEWLINE           décalage et aller à l'état 12
    SPACE             décalage et aller à l'état 13
    TINY              décalage et aller à l'état 14
    SCRIPTSIZE        décalage et aller à l'état 15
    FOOTNOTESIZE      décalage et aller à l'état 16
    SMALL             décalage et aller à l'état 17
    NORMALSIZE        décalage et aller à l'état 18
    LARGE             décalage et aller à l'état 19
    VERYLARGE         décalage et aller à l'état 20
    VERYVERYLARGE     décalage et aller à l'état 21
    HUGE              décalage et aller à l'état 22
    VERYHUGE          décalage et aller à l'état 23
    TEXTCOLOR         décalage et aller à l'état 24
    FONTFAMILY        décalage et aller à l'état 25
    NORMALFONT        décalage et aller à l'état 26
    BFSERIES          décalage et aller à l'état 27
    ITSHAPE           décalage et aller à l'état 28
    TEXTSC            décalage et aller à l'état 29
    TEXTSUPERSCRIPT   décalage et aller à l'état 30
    FBOX              décalage et aller à l'état 31
    UL                décalage et aller à l'état 32
    BARRER            décalage et aller à l'état 33
    LABEL             décalage et aller à l'état 34
    REF               décalage et aller à l'état 35
    PAGEREF           décalage et aller à l'état 36
    INDEX             décalage et aller à l'état 37
    CITE              décalage et aller à l'état 38
    FOOTNOTE          décalage et aller à l'état 39
    DATE              décalage et aller à l'état 40
    TODAY             décalage et aller à l'état 41
    BEGIN_ENV         décalage et aller à l'état 42
    DOLLAR_PRINTED    décalage et aller à l'état 43
    AND_PRINTED       décalage et aller à l'état 44
    OPSQRBRK_PRINTED  décalage et aller à l'état 45
    CLSQRBRK_PRINTED  décalage et aller à l'état 46
    OPBRC_PRINTED     décalage et aller à l'état 47
    CLBRC_PRINTED     décalage et aller à l'état 48
    STRING            décalage et aller à l'état 49
    '{'               décalage et aller à l'état 50
    '}'               décalage et aller à l'état 74

    command_name  aller à l'état 51
    env           aller à l'état 52
    command       aller à l'état 53
    escaped_char  aller à l'état 54
    text          aller à l'état 55
    element       aller à l'état 63


État 61

   44 optional_options_list: '[' . separated_strings ']'

    STRING  décalage et aller à l'état 75

    separated_strings  aller à l'état 76


État 62

   43 optional_options_list: optional_options_list . '[' separated_strings ']'
   66 command: command_name optional_options_list .

    '['  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 66 (command)


État 63

   80 elements_list: elements_list element .

    $défaut  réduction par utilisation de la règle 80 (elements_list)


État 64

    0 $accept: document $end .

    $défaut  accepter


État 65

   51 env: BEGIN_ENV '{' DOCUMENT . '}' optional_options_list elements_list END_ENV '{' DOCUMENT '}'
   52    | BEGIN_ENV '{' DOCUMENT . '}' elements_list END_ENV '{' DOCUMENT '}'

    '}'  décalage et aller à l'état 78


État 66

   53 env: BEGIN_ENV '{' TITLEPAGE . '}' optional_options_list elements_list END_ENV '{' TITLEPAGE '}'
   54    | BEGIN_ENV '{' TITLEPAGE . '}' elements_list END_ENV '{' TITLEPAGE '}'

    '}'  décalage et aller à l'état 79


État 67

   55 env: BEGIN_ENV '{' ENV_CENTER . '}' optional_options_list elements_list END_ENV '{' ENV_CENTER '}'
   56    | BEGIN_ENV '{' ENV_CENTER . '}' elements_list END_ENV '{' ENV_CENTER '}'

    '}'  décalage et aller à l'état 80


État 68

   59 env: BEGIN_ENV '{' TABLE . '}' '{' STRING '}' rows_list END_ENV '{' TABLE '}'
   60    | BEGIN_ENV '{' TABLE . '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABLE '}'

    '}'  décalage et aller à l'état 81


État 69

   61 env: BEGIN_ENV '{' TABULAR . '}' '{' STRING '}' rows_list END_ENV '{' TABULAR '}'
   62    | BEGIN_ENV '{' TABULAR . '}' '{' STRING '}' rows_list ROW_SEPARATOR END_ENV '{' TABULAR '}'

    '}'  décalage et aller à l'état 82


État 70

   57 env: BEGIN_ENV '{' ENUMERATE . '}' items_list END_ENV '{' ENUMERATE '}'

    '}'  décalage et aller à l'état 83


État 71

   58 env: BEGIN_ENV '{' ITEMIZE . '}' items_list END_ENV '{' ITEMIZE '}'

    '}'  décalage et aller à l'état 84


État 72

   63 env: BEGIN_ENV '{' EQUATION . '}' elements_list END_ENV '{' EQUATION '}'

    '}'  décalage et aller à l'état 85


État 73

   64 env: BEGIN_ENV '{' NUMEROTED_EQUATION . '}' elements_list END_ENV '{' NUMEROTED_EQUATION '}'

    '}'  décalage et aller à l'état 86


État 74

   79 element: '{' elements_list '}' .

    $défaut  réduction par utilisation de la règle 79 (element)


État 75

   42 separated_strings: STRING .

    $défaut  réduction par utilisation de la règle 42 (separated_strings)


État 76

   41 separated_strings: separated_strings . ',' STRING
   44 optional_options_list: '[' separated_strings . ']'

    ','  décalage et aller à l'état 87
    ']'  décalage et aller à l'état 88


État 77

   43 optional_options_list: optional_options_list '[' . separated_strings ']'

    STRING  décalage et aller à l'état 75

    separated_strings  aller à l'état 89


État 78

   51 env: BEGIN_ENV '{' DOCUMENT '}' . optional_options_list elements_list END_ENV '{' DOCUMENT '}'
   52    | BEGIN_ENV '{' DOCUMENT '}' . elements_list END_ENV '{' DOCUMENT '}'
